--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3135,3 +3135,14 @@ year={2012}
  pages={2825--2830},
  year={2011}
 }
+
+@article{Liu:MR'13,
+  title={Failure analysis of through-silicon vias in free-standing wafer under thermal-shock test},
+  author={Xi Liu and Qiao Chen and Venkatesh Sundaram and Rao R. Tummala and Suresh K. Sitaraman},
+  journal={Microelectronics Reliability},
+  volume={53},
+  number={},
+  pages={70--78},
+  year={2013},
+  publisher={Elsevier}
+}
