--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3146,3 +3146,12 @@ year={2012}
   year={2013},
   publisher={Elsevier}
 }
+
+@inproceedings{He:CCVPR'15,
+  title={Convolutional neural networks at constrained time cost},
+  author={Kaiming He and Jian Sun},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={5353--5360},
+  year={2015},
+}
+  
