--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3147,7 +3147,7 @@ year={2012}
   publisher={Elsevier}
 }
 
-@inproceedings{He:CCVPR'15,
+@inproceedings{He:CVPR'15,
   title={Convolutional neural networks at constrained time cost},
   author={Kaiming He and Jian Sun},
   booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
