--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3150,7 +3150,7 @@ year={2012}
 @inproceedings{He:CVPR'15,
   title={Convolutional neural networks at constrained time cost},
   author={Kaiming He and Jian Sun},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  booktitle={Proc. of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages={5353--5360},
   year={2015},
 }
