--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -29,21 +29,23 @@
 @string{jrssb = "Journal of the Royal Statistical Society. Series B (Methodological)"}
 @string{assp = "IEEE Trans. Acoustics, Speech, and Signal Processing"}
 @string{tsp= "IEEE Trans. on Signal Processing"}
-@string{glsvlsi = "Proc. IEEE/ACM International Great Lakes Symposium on VLSI (GLSVLSI)"}
+@string{glsvlsi = "Proc. IEEE/ACM Int. Great Lakes Symp. on VLSI (GLSVLSI)"}
 @string{ieeeproc = "Proc. of the IEEE"}
-@string{acc = "Proc. American Control Conference (ACC)"}
-@string{asplos = "Proc. of International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS) "}
-@string{isqed = "Proc. Int. Symposium. on Quality Electronic Design (ISQED)"}
+@string{acc = "Proc. American Control Conf. (ACC)"}
+@string{asplos = "Proc. Int. Conf. on Architectural Support for Programming Languages and Operating Systems (ASPLOS)"}
+@string{isqed = "Proc. Int. Symp. on Quality Electronic Design (ISQED)"}
 @string{hpca = "Proc. IEEE Int. Symp. on High-Performance Computer Architecture (HPCA)"}
-@string{temm = "Proc. 1st International IEEE Workshop on Thermal Modeling and Management: Chips to Data Centers (TEMM) "}
+@string{temm = "Proc. 1st International IEEE Workshop on Thermal Modeling and Management: Chips to Data Centers (TEMM)"}
 @string{sigops = "ACM SIGPLAN NOTICES "}
-@string{istfa = "35th International Symposium for Testing and Failure Analysis, ISTFA"}
+@string{istfa = "Int. Symp. for Testing and Failure Analysis (ISTFA)"}
 @string{acmcomm="Communications of the ACM"}
-@string{socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
-@string{icsict="Proc. International Conference on Solid-State and Integrated Circuit Technology (ICSICT)"}
-@string{cdc="Proc. IEEE Conference on Decision and Control (CDC)"}
-@string{codes="Proc. International conference on Hardware/software codesign and system synthesis (CODES+ISSS)"}
+@string{socc="Proc. IEEE Int. System-on-Chip Conf. (SOCC)"}
+@string{icsict="Proc. Int. Conf. on Solid-State and Integrated Circuit Technology (ICSICT)"}
+@string{cdc="Proc. IEEE Conf. on Decision and Control (CDC)"}
+@string{codes="Proc. Int. conf. on Hardware/software codesign and system synthesis (CODES+ISSS)"}
 @string{micro="IEEE MICRO"}
+@string{icml="Proc. Int. Conf. on Machine Learning (ICML)"}
+@string{cvpr="Proc. IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -2272,7 +2274,7 @@ Year={2016}
 @inproceedings{Pascanu:ICML'13,
 	title={On the difficulty of training recurrent neural networks},
 	author={Razvan Pascanu and Tomas Mikolov and Yoshua Bengio},
-	booktitle={Proceedings of the International Conference on Machine Learning (ICML)},
+	booktitle=icml,
 	pages={1310--1318},
 	year={2013},
 }
@@ -2956,9 +2958,11 @@ year={2012}
   title={Thermal Stress and Reliability Analysis of {TSV}-Based {3-D} {IC}s With a Novel Adaptive Strategy Finite Element Method},
   author={Hao Zhou and Hengliang Zhu and Tao Cui and David Z. Pan and Dian Zhou and Xuan Zeng},
   journal=tvlsi,
-  pages={1--14},
+  volume={26},
+  number={7},
+  pages={1312--1325},
   year={2018},
-  organization={IEEE}
+  publisher={IEEE}
 }
 
 @article{Athikulwongse:TCAD'13,
@@ -3116,7 +3120,7 @@ year={2012}
 @inproceedings{Goodfellow:ICML'13,
 	title={Maxout networks},
 	author={Ian J. Goodfellow and David Warde-Farley and Mehdi Mirza and Aaron Courville and Yoshua Bengio},
-	booktitle={Proceedings of the International Conference on Machine Learning (ICML)},
+	booktitle=icml,
 	pages={1319--1327},
 	year={2013},
 }
@@ -3150,7 +3154,7 @@ year={2012}
 @inproceedings{He:CVPR'15,
   title={Convolutional neural networks at constrained time cost},
   author={Kaiming He and Jian Sun},
-  booktitle={Proc. of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  booktitle=cvpr,
   pages={5353--5360},
   year={2015},
 }
