--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2047,7 +2047,7 @@ Year={2016}
 
 @inproceedings{Pan:ASPDAC'12,
 	title={Design for manufacturability and reliability for {TSV}-based {3D ICs}},
-	author={David Z. Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang},
+	author={David Z. Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-Seok Yang},
 	booktitle=aspdac,
 	pages={750--755},
 	year={2012},
