--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2098,11 +2098,12 @@ Year={2016}
 @article{Werbos:PI'90,
   title={Backpropagation through time: what it does and how to do it},
   author={Paul J Werbos},
-  journal={Proceedings of the IEEE},
+  journal=ieeeproc,
   volume={78},
   number={10},
   pages={1550--1560},
   year={1990},
+  month={October},
   publisher={IEEE}
 }
 
@@ -3158,4 +3159,24 @@ year={2012}
   pages={5353--5360},
   year={2015},
 }
-  
+
+@article{Banerjee:IEEEPROC'01,
+  title={{3-D ICs}: a novel chip design for improving deep-submicrometer interconnect performance and systems-on-chip integration},
+  author={Kaustav Banerjee and Shukri J. Souri and Pawan Kapur and Krishna C. Saraswat},
+  journal=ieeeproc,
+  volume={89},
+  number={5},
+  pages={602--633},
+  year={2001},
+  month={May},
+  publisher={IEEE}
+}
+
+@conference{Weerasekera:ICCAD'07,
+author={Roshan Weerasekera and Li-Rong Zheng and Dinesh Pamunuwa and Hannu Tenhunen},
+title={Extending systems-on-chip to the third dimension: performance, cost and technological tradeoffs},
+booktitle= iccad,
+year={2007},
+pages = {212--219},
+month ={Nov.},
+}
