--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3180,3 +3180,11 @@ year={2007},
 pages = {212--219},
 month ={Nov.},
 }
+
+@Book{Silberschatz:Book'12,
+Author={Avi Silberschatz and Peter Baer Galvin and Greg Gagne},
+Title={Operating System Concepts},
+Year={2012},
+edition={9th},
+Publisher={Wiley},
+}
