--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -3187,4 +3187,21 @@ Title={Operating System Concepts},
 Year={2012},
 edition={9th},
 Publisher={Wiley},
+}
+
+@inproceedings{Xu:ICITA'08,
+  title={A novel approach for determining the optimal number of hidden layer neurons for FNN’s and its application in data mining},
+ booktitle= {International Conference on Information Technology and Applications},
+  author={Shuxiang Xu and Ling Chen},
+  year={2008}
+}
+
+@article{Panchal:IJCSMC'14,
+  title={Review on methods of selecting number of hidden nodes in artificial neural network},
+  author={Foram S. Panchal and Mahesh Panchal},
+  journal={International Journal of Computer Science and Mobile Computing},
+  volume={3},
+  number={11},
+  pages={455--464},
+  year={2014}
 }
