--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3205,3 +3205,83 @@ Publisher={Wiley},
   pages={455--464},
   year={2014}
 }
+
+@article{Rossi:SSE'16,
+  title={A 60 gops/w,- 1.8 v to 0.9 v body bias ulp cluster in 28 nm utbb fd-soi technology},
+  author={Davide Rossi and  Antonio Pullini and Igor Loi and  Michael Gautschi and Frank K G{\"u}rkaynak and  Andrea Bartolini and Philippe  Flatresse and Luca Benini},
+  journal={Solid-State Electronics},
+  volume={117},
+  pages={170--184},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{Rossi:IM'17,
+  title={Energy-efficient near-threshold parallel computing: The pulpv2 cluster},
+  author={Davide Rossi and Antonio Pullini and Igor Loi and  Michael Gautschi and Frank Ka{\u{g}}an G{\"u}rkaynak and Adam Teman and Jeremy Constantin and Andreas Burg and  Ivan Miro-Panades and Edith Beign{\`e} and Fabien Clermidy and Philippe Flatresse and Luca Benini},
+  journal={Ieee Micro},
+  volume={37},
+  number={5},
+  pages={20--31},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{Diversi:TCS'14,
+  title={Bias-Compensated Least Squares Identification of Distributed Thermal Models for Many-Core Systems-on-Chip.},
+  author={Roberto  Diversi and Andrea Tilli and Andrea Bartolini and  Francesco Beneventi and Luca Benini},
+  journal=tcs,
+  volume={61},
+  number={9},
+  pages={2663--2676},
+  year={2014}
+}
+
+@article{Bartolini:DE'17,
+  title={Self-Aware Thermal Management for High Performance Computing Processors},
+  author={Andrea Bartolini and Roberto Bartolini and Daniele Cesarini and Francesco Beneventi},
+  journal={IEEE Design \& Test},
+  year={2017}
+}
+
+@inproceedings{Diversi:IECON'16,
+  title={Thermal model identification of supercomputing nodes in production environment},
+  author={Roberto Diversi and Andrea Bartolini and Francesco Beneventi and  Luca Benini},
+  booktitle={Industrial Electronics Society, IECON 2016-42nd Annual Conference of the IEEE},
+  pages={4838--4844},
+  year={2016}
+}
+
+@article{Reda:ISJ'18,
+  title={Blind Identification of Thermal Models and Power Sources from Thermal Measurements},
+  author={Sherief Reda and Kapil Dev and Adel Belouchrani},
+  journal={IEEE Sensors Journal},
+  volume={18},
+  number={2},
+  pages={680--691},
+  year={2018}
+}
+
+@inproceedings{Shafique:DAC'14,
+  title={The EDA challenges in the dark silicon era: Temperature, reliability, and variability perspectives},
+  author={Muhammad Shafique and Siddharth Garg and J{\"o}rg Henkel and Diana Marculescu},
+  booktitle=dac,
+  pages={1--6},
+  year={2014}
+}
+
+@inproceedings{Henkel:DAC'13,
+  title={Reliable on-chip systems in the nano-era: Lessons learnt and future trends},
+  author={J{\"o}rg Henkel and Lars Bauer and Nikil Dutt and Puneet Gupta and Sani Nassif and Muhammad Shafique and Mehdi Tahoori and Norbert Wehn},
+  booktitle=dac,
+  pages={99},
+  year={2013}
+}
+
+@inproceedings{Singh:DAC'13,
+  title={Mapping on multi/many-core systems: survey of current and emerging trends},
+  author={ Amit Kumar Singh and Muhammad Shafique and Akash Kumar and  J{\"o}rg Henkel},
+  booktitle=dac,
+  pages={1--10},
+  year={2013},
+}
