--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3283,5 +3283,45 @@ Publisher={Wiley},
   author={ Amit Kumar Singh and Muhammad Shafique and Akash Kumar and  J{\"o}rg Henkel},
   booktitle=dac,
   pages={1--10},
-  year={2013},
+  year={2013}
+}
+
+@inproceedings{Bogdan:CASES'16,
+  title={Power and thermal management in massive multicore chips: theoretical foundation meets architectural innovation and resource allocation},
+  author={Paul Bogdan and Partha Pratim Pande and  Hussam Amrouch and Muhammad Shafique and  J{\"o}rg Henkel},
+  booktitle={Proceedings of the International Conference on Compilers, Architectures and Synthesis for Embedded Systems},
+  pages={4},
+  year={2016}
+}
+
+@inproceedings{Khdr:DATE'14,
+  title={mDTM: Multi-objective dynamic thermal management for on-chip systems},
+  author={Heba Khdr and Thomas Ebi and Muhammad Shafique and Hussam Amrouch},
+  booktitle=date, 2014},
+  pages={1--6},
+  year={2014}
+}
+
+@inproceedings{Prakash:DAC'16,
+  title={Improving mobile gaming performance through cooperative CPU-GPU thermal management},
+  author={Alok Prakash and Hussam Amrouch and Muhammad  Shafique and Tulika Mitra and J{\"o}rg Henkel},
+  booktitle=dac,
+  pages={47},
+  year={2016}
+}
+
+@inproceedings{Palomino:DATE'16,
+  title={Thermal optimization using adaptive approximate computing for video coding},
+  author={Daniel Palomino and Muhammad Shafique and Altamiro Susin and J{\"o}rg Henkel},
+  booktitle=date, 
+  pages={1207--1212},
+  year={2016}
+}
+
+@inproceedings{Palomino:ISLPED'14,
+  title={TONE: adaptive temperature optimization for the next generation video encoders},
+  author={Daniel Palomino and Muhammad Shafique and Altamiro Susin and J{\"o}rg Henkel},
+  booktitle=islped,
+  pages={33--38},
+  year={2014}
 }
