--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3216,10 +3216,10 @@ Publisher={Wiley},
   publisher={Elsevier}
 }
 
-@article{Rossi:IM'17,
+@article{Rossi:MICRO'17,
   title={Energy-efficient near-threshold parallel computing: The pulpv2 cluster},
   author={Davide Rossi and Antonio Pullini and Igor Loi and  Michael Gautschi and Frank Ka{\u{g}}an G{\"u}rkaynak and Adam Teman and Jeremy Constantin and Andreas Burg and  Ivan Miro-Panades and Edith Beign{\`e} and Fabien Clermidy and Philippe Flatresse and Luca Benini},
-  journal={Ieee Micro},
+  journal=micro,
   volume={37},
   number={5},
   pages={20--31},
@@ -3234,14 +3234,14 @@ Publisher={Wiley},
   volume={61},
   number={9},
   pages={2663--2676},
-  year={2014}
+  year={2014},
 }
 
 @article{Bartolini:DE'17,
   title={Self-Aware Thermal Management for High Performance Computing Processors},
   author={Andrea Bartolini and Roberto Bartolini and Daniele Cesarini and Francesco Beneventi},
   journal={IEEE Design \& Test},
-  year={2017}
+  year={2017},
 }
 
 @inproceedings{Diversi:IECON'16,
@@ -3249,7 +3249,7 @@ Publisher={Wiley},
   author={Roberto Diversi and Andrea Bartolini and Francesco Beneventi and  Luca Benini},
   booktitle={Industrial Electronics Society, IECON 2016-42nd Annual Conference of the IEEE},
   pages={4838--4844},
-  year={2016}
+  year={2016},
 }
 
 @article{Reda:ISJ'18,
@@ -3259,7 +3259,7 @@ Publisher={Wiley},
   volume={18},
   number={2},
   pages={680--691},
-  year={2018}
+  year={2018},
 }
 
 @inproceedings{Shafique:DAC'14,
@@ -3267,7 +3267,7 @@ Publisher={Wiley},
   author={Muhammad Shafique and Siddharth Garg and J{\"o}rg Henkel and Diana Marculescu},
   booktitle=dac,
   pages={1--6},
-  year={2014}
+  year={2014},
 }
 
 @inproceedings{Henkel:DAC'13,
@@ -3275,7 +3275,7 @@ Publisher={Wiley},
   author={J{\"o}rg Henkel and Lars Bauer and Nikil Dutt and Puneet Gupta and Sani Nassif and Muhammad Shafique and Mehdi Tahoori and Norbert Wehn},
   booktitle=dac,
   pages={99},
-  year={2013}
+  year={2013},
 }
 
 @inproceedings{Singh:DAC'13,
@@ -3283,7 +3283,7 @@ Publisher={Wiley},
   author={ Amit Kumar Singh and Muhammad Shafique and Akash Kumar and  J{\"o}rg Henkel},
   booktitle=dac,
   pages={1--10},
-  year={2013}
+  year={2013},
 }
 
 @inproceedings{Bogdan:CASES'16,
@@ -3291,15 +3291,15 @@ Publisher={Wiley},
   author={Paul Bogdan and Partha Pratim Pande and  Hussam Amrouch and Muhammad Shafique and  J{\"o}rg Henkel},
   booktitle={Proceedings of the International Conference on Compilers, Architectures and Synthesis for Embedded Systems},
   pages={4},
-  year={2016}
+  year={2016},
 }
 
 @inproceedings{Khdr:DATE'14,
   title={mDTM: Multi-objective dynamic thermal management for on-chip systems},
   author={Heba Khdr and Thomas Ebi and Muhammad Shafique and Hussam Amrouch},
-  booktitle=date, 2014},
+  booktitle=date, 
   pages={1--6},
-  year={2014}
+  year={2014},
 }
 
 @inproceedings{Prakash:DAC'16,
@@ -3307,7 +3307,7 @@ Publisher={Wiley},
   author={Alok Prakash and Hussam Amrouch and Muhammad  Shafique and Tulika Mitra and J{\"o}rg Henkel},
   booktitle=dac,
   pages={47},
-  year={2016}
+  year={2016},
 }
 
 @inproceedings{Palomino:DATE'16,
@@ -3315,7 +3315,7 @@ Publisher={Wiley},
   author={Daniel Palomino and Muhammad Shafique and Altamiro Susin and J{\"o}rg Henkel},
   booktitle=date, 
   pages={1207--1212},
-  year={2016}
+  year={2016},
 }
 
 @inproceedings{Palomino:ISLPED'14,
@@ -3323,5 +3323,5 @@ Publisher={Wiley},
   author={Daniel Palomino and Muhammad Shafique and Altamiro Susin and J{\"o}rg Henkel},
   booktitle=islped,
   pages={33--38},
-  year={2014}
+  year={2014},
 }
