--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3325,3 +3325,14 @@ Publisher={Wiley},
   pages={33--38},
   year={2014},
 }
+
+
+@article{Xie:TCASII'15,
+  title={Performance comparisons between 7-nm FinFET and conventional bulk CMOS standard cell libraries},
+  author={Qing Xie and Xue Lin and Yanzhi Wang and Shuang Chen and Mohammad Javad Dousti and Massoud Pedram},
+  journal={IEEE Transactions on Circuits and Systems II: Express Briefs},
+  volume={62},
+  number={8},
+  pages={761--765},
+  year={2015}
+}
