--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3328,3 +3328,31 @@ Publisher={Wiley},
   pages={761--765},
   year={2015}
 }
+
+@article{Iranfar:TPDS'18,
+  title={Machine Learning-Based Quality-Aware Power and Thermal Management of Multistream HEVC Encoding on Multicore Servers},
+  author={Arman Iranfar and Marina Zapater and David Atienza},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  year={2018}
+}
+
+@article{Zhang:TPDS'18,
+  title={Machine Learning-Based Temperature Prediction for Runtime Thermal Management Across System Components},
+  author={Kaicheng Zhang and Akhil Guliani and Seda and Memik Gokhan Ogrenci-Memik and Kazutomo Yoshii and Rajesh Sankaran and Pete  Beckman},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={29},
+  number={2},
+  pages={405--419},
+  year={2018}
+}
+
+@article{Singh:JLPE'17,
+  title={Learning-based run-time power and energy management of multi/many-core systems: current and future trends},
+  author={Amit Kumar Singh and Charles Leech and Basireddy Karunakar Reddy and Al- Bashir M Hashimi and Geoff V Merrett},
+  journal={Journal of Low Power Electronics},
+  volume={13},
+  number={3},
+  pages={310--325},
+  year={2017},
+  publisher={American Scientific Publishers}
+}
