--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -654,7 +654,7 @@ month ={June.},
 
 @inproceedings{Xin:CASoN'10,
   title={Study of power system short-term load forecast based on artificial neural network and genetic algorithm},
-  author={Xin-hui, Du and Feng, Tian and Shao-Qiong, Tan},
+  author={Xin-Hui, Du and Feng, Tian and Shao-Qiong, Tan},
   booktitle={Computational Aspects of Social Networks (CASoN), 2010 International Conference on},
   pages={725--728},
   year={2010},
@@ -691,7 +691,7 @@ month ={June.},
 
 @article{Chen:MSF'13,
   title={Numerical Simulation of Casting Thermal Stress and Deformation Based on Finite Difference Method},
-  author={Chen, Tao and Liao, Dun Ming and Zhou, Jian Xin},
+  author={Chen, Tao and Liao, Dunming and Zhou, Jianxin},
   journal={Materials Science Forum (MSF)},
   volume={762},
   pages={224--229},
