--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3120,7 +3120,7 @@ year={2012}
 
 @inproceedings{Goodfellow:ICML'13,
 	title={Maxout networks},
-	author={Ian J. Goodfellow and David Warde-Farley and Mehdi Mirza and Aaron Courville and Yoshua Bengio},
+	author={Ian Goodfellow and David Warde-Farley and Mehdi Mirza and Aaron Courville and Yoshua Bengio},
 	booktitle=icml,
 	pages={1319--1327},
 	year={2013},
