update and bug fix

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3207,7 +3207,7 @@ Publisher={Wiley},
 }
 
 @article{Rossi:SSE'16,
-  title={A 60 gops/w,- 1.8 v to 0.9 v body bias ulp cluster in 28 nm utbb fd-soi technology},
+  title={A 60 {GOPS/W}, -1.8 {V} to 0.9 {V} body bias {ULP} cluster in 28 nm {UTBB} {FD-SOI} technology},
   author={Davide Rossi and  Antonio Pullini and Igor Loi and  Michael Gautschi and Frank K G{\"u}rkaynak and  Andrea Bartolini and Philippe  Flatresse and Luca Benini},
   journal={Solid-State Electronics},
   volume={117},
@@ -3217,7 +3217,7 @@ Publisher={Wiley},
 }
 
 @article{Rossi:MICRO'17,
-  title={Energy-efficient near-threshold parallel computing: The pulpv2 cluster},
+  title={Energy-efficient near-threshold parallel computing: The {PULPv2} cluster},
   author={Davide Rossi and Antonio Pullini and Igor Loi and  Michael Gautschi and Frank Ka{\u{g}}an G{\"u}rkaynak and Adam Teman and Jeremy Constantin and Andreas Burg and  Ivan Miro-Panades and Edith Beign{\`e} and Fabien Clermidy and Philippe Flatresse and Luca Benini},
   journal=micro,
   volume={37},
@@ -3355,4 +3355,12 @@ Publisher={Wiley},
   pages={310--325},
   year={2017},
   publisher={American Scientific Publishers}
+}
+
+@ONLINE{PTM:Online,
+OPTauthor = {},
+title = {Predictive technology model},
+OPTmonth = jun,
+OPTyear = {2009},
+url = {http://ptm.asu.edu}
 }
