--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -51,6 +51,18 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+@ARTICLE{WangHuang:TCAD'18,
+	author = {Hai Wang and Darong Huang and Rui Liu and Chi Zhang and He Tang and Yuan Yuan},
+	journal = tcad,
+	title = {{STREAM}: Stress and Thermal Aware Reliability Management for {3-D ICs}},
+	year = {2018},
+        OPTmonth = {May},
+        OPTvolume = {67},
+        OPTnumber = {5},
+        OPTpages = {617--630},
+}
+
 @ARTICLE{WangWan:TOC'18,
 	author = {Hai Wang and Jiachun Wan and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
 	journal = toc,
