--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -51,6 +51,17 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangTang:TOC'18,
+	author = {Hai Wang and Diya Tang and Ming Zhang and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
+	journal = toc,
+	title = {{GDP}: A Greedy Based Dynamic Power Budgeting Method for Multi/Many-Core Systems in Dark Silicon},
+	year = {2018},
+        OPTmonth = {May},
+        OPTvolume = {67},
+        OPTnumber = {5},
+        OPTpages = {617--630},
+}
+
 @ARTICLE{WangWan:TOC'18,
 	author = {Hai Wang and Jiachun Wan and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
 	journal = toc,
@@ -61,8 +72,6 @@
         number = {5},
         pages = {617--630},
 }
-
-
 
 @inproceedings{WanWang:ICSICT'16,
  author = {Jiachun Wan and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
@@ -578,8 +587,8 @@ author={ Shafique,Muhammad and Garg, Shelly and Henkel, J\"{o}rg and Marculescu,
 title={The {EDA} challenges in the dark silicon era},
 booktitle= dac,
 year={2014},
-pages = {1--6},
-month ={June.},
+OPTpages = {1--6},
+month ={June},
 }
 
 @inproceedings{Huang:DAC'04,
@@ -3266,7 +3275,7 @@ Publisher={Wiley},
   title={Reliable on-chip systems in the nano-era: Lessons learnt and future trends},
   author={J{\"o}rg Henkel and Lars Bauer and Nikil Dutt and Puneet Gupta and Sani Nassif and Muhammad Shafique and Mehdi Tahoori and Norbert Wehn},
   booktitle=dac,
-  pages={99},
+  OPTpages={99},
   year={2013},
 }
 
