--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -51,6 +51,16 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangTang:TOC'18,
+	author = {Hai Wang and Diya Tang and Ming Zhang and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
+	journal = toc,
+	title = {{GDP}: A Greedy Based Dynamic Power Budgeting Method for Multi/Many-Core Systems in Dark Silicon},
+	year = {2018},
+        OPTmonth = {May},
+        OPTvolume = {67},
+        OPTnumber = {5},
+        OPTpages = {617--630},
+}
 
 @ARTICLE{WangHuang:TCAD'18,
 	author = {Hai Wang and Darong Huang and Rui Liu and Chi Zhang and He Tang and Yuan Yuan},
@@ -590,8 +600,8 @@ author={ Shafique,Muhammad and Garg, Shelly and Henkel, J\"{o}rg and Marculescu,
 title={The {EDA} challenges in the dark silicon era},
 booktitle= dac,
 year={2014},
-pages = {1--6},
-month ={June.},
+OPTpages = {1--6},
+month ={June},
 }
 
 @inproceedings{Huang:DAC'04,
@@ -599,8 +609,8 @@ author={ Wei Huang, Mircea R. Stan and Kevin Skadron and Karthik  ankaranarayana
 title={Compact Thermal Modeling for Temperature-Aware Design},
 booktitle= dac,
 year={2004},
-pages = {878--883 },
-month ={June.},
+pages = {878--883},
+month ={June},
 }
 
 
@@ -3278,7 +3288,7 @@ Publisher={Wiley},
   title={Reliable on-chip systems in the nano-era: Lessons learnt and future trends},
   author={J{\"o}rg Henkel and Lars Bauer and Nikil Dutt and Puneet Gupta and Sani Nassif and Muhammad Shafique and Mehdi Tahoori and Norbert Wehn},
   booktitle=dac,
-  pages={99},
+  OPTpages={99},
   year={2013},
 }
 
