--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3386,3 +3386,8 @@ OPTmonth = jun,
 OPTyear = {2009},
 url = {http://ptm.asu.edu}
 }
+
+@ONLINE{ESN:Online,
+title = {Echo State Networks and Reservoir Computing},
+url = {http://minds.jacobs-university.de/research/esnresearch/}
+}
