--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3391,3 +3391,13 @@ url = {http://ptm.asu.edu}
 title = {Echo State Networks and Reservoir Computing},
 url = {http://minds.jacobs-university.de/research/esnresearch/}
 }
+
+
+@article{Oxley:JPTC'18,
+  title={Rate-based thermal, power, and co-location aware resource management for heterogeneous data centers},
+  author={Mark A Oxley and Eric Jonardi and Sudeep Pasricha and Anthony A Maciejewski and Howard Jay Siegel and Patrick J  Burns and Gregory A Koenig},
+  journal={Journal of Parallel and Distributed Computing},
+  volume={112},
+  pages={126--139},
+  year={2018}
+}
