--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3393,7 +3393,7 @@ url = {http://minds.jacobs-university.de/research/esnresearch/}
 }
 
 
-@article{Oxley:JPTC'18,
+@article{Oxley:JPDC'18,
   title={Rate-based thermal, power, and co-location aware resource management for heterogeneous data centers},
   author={Mark A Oxley and Eric Jonardi and Sudeep Pasricha and Anthony A Maciejewski and Howard Jay Siegel and Patrick J  Burns and Gregory A Koenig},
   journal={Journal of Parallel and Distributed Computing},
