--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3342,7 +3342,7 @@ Publisher={Wiley},
 
 
 @article{Xie:TCASII'15,
-  title={Performance comparisons between 7-nm FinFET and conventional bulk CMOS standard cell libraries},
+  title={Performance comparisons between 7-nm {FinFET} and conventional bulk {CMOS} standard cell libraries},
   author={Qing Xie and Xue Lin and Yanzhi Wang and Shuang Chen and Mohammad Javad Dousti and Massoud Pedram},
   journal={IEEE Transactions on Circuits and Systems II: Express Briefs},
   volume={62},
