--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2380,7 +2380,7 @@ Year={2016}
 }
 
 @inproceedings{Wang:ISPA'10,
-  title={Power-efficient work distribution method for CPU-GPU heterogeneous system},
+  title={Power-efficient work distribution method for {CPU-GPU} heterogeneous system},
   author={Guibin Wang and Xiaoguang Ren},
   booktitle={Parallel and Distributed Processing with Applications (ISPA), 2010 International Symposium on},
   pages={122--129},
@@ -2718,9 +2718,9 @@ Year={1987}
 }
 
 @inproceedings{Chaturvedi:CIT'10,
-  title={Leakage Aware Scheduling on Maximum Temperature Minimization for Periodic Hard Real-Time   Systems},
+  title={Leakage Aware Scheduling on Maximum Temperature Minimization for Periodic Hard Real-Time Systems},
   author={Vivek Chaturvedi and Huang Huang and Gang Quan},
-  booktitle={IEEE International Conference on Computer and Information Technology},
+  booktitle={Proc. International Conference on Computer and Information Technology},
   pages={1802--1809},
   year={2010},
 }
@@ -2728,7 +2728,7 @@ Year={1987}
 @inproceedings{Quan:ECRTS'09,
   title={Leakage Aware Feasibility Analysis for Temperature-Constrained Hard Real-Time Periodic Tasks},
   author={Gang Quan and Yan Zhang},
-  booktitle={Euromicro Conference on Real-Time Systems},
+  booktitle={Proc. Euromicro Conference on Real-Time Systems},
   pages={207--216},
   year={2009},
 }
@@ -3212,7 +3212,7 @@ Publisher={Wiley},
 }
 
 @inproceedings{Xu:ICITA'08,
-  title={A novel approach for determining the optimal number of hidden layer neurons for FNN’s and its application in data mining},
+  title={A novel approach for determining the optimal number of hidden layer neurons for {FNN}’s and its application in data mining},
  booktitle= {International Conference on Information Technology and Applications},
   author={Shuxiang Xu and Ling Chen},
   year={2008}
@@ -3259,17 +3259,20 @@ Publisher={Wiley},
   year={2014},
 }
 
-@article{Bartolini:DE'17,
+@article{Bartolini:DE'18,
   title={Self-Aware Thermal Management for High Performance Computing Processors},
   author={Andrea Bartolini and Roberto Bartolini and Daniele Cesarini and Francesco Beneventi},
   journal={IEEE Design \& Test},
-  year={2017},
+  volume={35},
+  number={5},
+  pages={28--35},
+  year={2018},
 }
 
 @inproceedings{Diversi:IECON'16,
   title={Thermal model identification of supercomputing nodes in production environment},
   author={Roberto Diversi and Andrea Bartolini and Francesco Beneventi and  Luca Benini},
-  booktitle={Industrial Electronics Society, IECON 2016-42nd Annual Conference of the IEEE},
+  booktitle={Proc. Annual Conference of the IEEE Industrial Electronics Society (IECON)},
   pages={4838--4844},
   year={2016},
 }
@@ -3294,7 +3297,7 @@ Publisher={Wiley},
 
 @inproceedings{Singh:DAC'13,
   title={Mapping on multi/many-core systems: survey of current and emerging trends},
-  author={ Amit Kumar Singh and Muhammad Shafique and Akash Kumar and  J{\"o}rg Henkel},
+  author={Amit Kumar Singh and Muhammad Shafique and Akash Kumar and  J{\"o}rg Henkel},
   booktitle=dac,
   pages={1--10},
   year={2013},
@@ -3303,13 +3306,13 @@ Publisher={Wiley},
 @inproceedings{Bogdan:CASES'16,
   title={Power and thermal management in massive multicore chips: theoretical foundation meets architectural innovation and resource allocation},
   author={Paul Bogdan and Partha Pratim Pande and  Hussam Amrouch and Muhammad Shafique and  J{\"o}rg Henkel},
-  booktitle={Proceedings of the International Conference on Compilers, Architectures and Synthesis for Embedded Systems},
+  booktitle={Proc. International Conference on Compilers, Architectures and Synthesis for Embedded Systems},
   pages={4},
   year={2016},
 }
 
 @inproceedings{Khdr:DATE'14,
-  title={mDTM: Multi-objective dynamic thermal management for on-chip systems},
+  title={{mDTM}: Multi-objective dynamic thermal management for on-chip systems},
   author={Heba Khdr and Thomas Ebi and Muhammad Shafique and Hussam Amrouch},
   booktitle=date, 
   pages={1--6},
@@ -3317,7 +3320,7 @@ Publisher={Wiley},
 }
 
 @inproceedings{Prakash:DAC'16,
-  title={Improving mobile gaming performance through cooperative CPU-GPU thermal management},
+  title={Improving mobile gaming performance through cooperative {CPU-GPU} thermal management},
   author={Alok Prakash and Hussam Amrouch and Muhammad  Shafique and Tulika Mitra and J{\"o}rg Henkel},
   booktitle=dac,
   pages={47},
@@ -3333,7 +3336,7 @@ Publisher={Wiley},
 }
 
 @inproceedings{Palomino:ISLPED'14,
-  title={TONE: adaptive temperature optimization for the next generation video encoders},
+  title={{TONE}: Adaptive temperature optimization for the next generation video encoders},
   author={Daniel Palomino and Muhammad Shafique and Altamiro Susin and J{\"o}rg Henkel},
   booktitle=islped,
   pages={33--38},
