--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3323,7 +3323,7 @@ Publisher={Wiley},
   title={Improving mobile gaming performance through cooperative {CPU-GPU} thermal management},
   author={Alok Prakash and Hussam Amrouch and Muhammad  Shafique and Tulika Mitra and J{\"o}rg Henkel},
   booktitle=dac,
-  pages={47},
+  OPTpages={47},
   year={2016},
 }
 
@@ -3355,7 +3355,7 @@ Publisher={Wiley},
 }
 
 @article{Iranfar:TPDS'18,
-  title={Machine Learning-Based Quality-Aware Power and Thermal Management of Multistream HEVC Encoding on Multicore Servers},
+  title={Machine Learning-Based Quality-Aware Power and Thermal Management of Multistream {HEVC} Encoding on Multicore Servers},
   author={Arman Iranfar and Marina Zapater and David Atienza},
   journal={IEEE Transactions on Parallel and Distributed Systems},
   year={2018}
