--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3404,3 +3404,12 @@ url = {http://minds.jacobs-university.de/research/esnresearch/}
   pages={126--139},
   year={2018}
 }
+
+@article{Ali:JES'11,
+  title={Neural network predictive control based power system stabilizer},
+  author={Ali Mohamed Yousef Ali},
+  journal={Journal of Engineering Sciences},
+  volume={39},
+  number={6},
+  year={2011}
+}
