--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3413,3 +3413,12 @@ url = {http://minds.jacobs-university.de/research/esnresearch/}
   number={6},
   year={2011}
 }
+
+@conference{Kim:ICCAD'15,
+author={Yeseong Kim and Francesco Parterna and Sameer Tilak and Tajana S. Rosing},
+title={Smartphone Analysis and Optimization based on User Activity Recognition},
+booktitle= iccad,
+year={2015},
+pages = {605--612},
+month ={Nov.},
+}
