--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3422,3 +3422,25 @@ year={2015},
 pages = {605--612},
 month ={Nov.},
 }
+
+@inproceedings{Kim:DATE'15,
+ author = {Young Geun Kim and Minyong Kim and Jae Min Kim and Sung Woo Chung},
+ title = {M-DTM: Migration-based Dynamic Thermal Management for Heterogeneous Mobile Multi-core Processors},
+ booktitle = date,
+ year = {2015},
+ month = {March},
+ location = {Grenoble, France},
+ pages = {1533--1538}
+}
+
+
+@article{Bhat:TVLSI'18,
+	title={Algorithmic Optimization of Thermal and Power Management for Heterogeneous Mobile Platforms},
+	author={Ganapati Bhat and Gaurav Singla and Ali K. Unver and Umit Y. Ogras},
+	journal=tvlsi,
+	volume={26},
+	number={3},
+	pages={544--557},
+	year={2018},
+	month={November}
+}
