--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3444,3 +3444,23 @@ month ={Nov.},
 	year={2018},
 	month={November}
 }
+
+@inproceedings{Sharifi:ASPDAC'10,
+ author = {Shervin Sharifi and Ayse Kivilcim Coskun and Tajana Simunic Rosing},
+ title = {Hybrid dynamic energy and thermal management in heterogeneous embedded multiprocessor SoCs},
+ booktitle = aspdac,
+ year = {2010},
+ month = {January},
+ location = {Taipei, Taiwan},
+ pages = {873--878}
+}
+
+@inproceedings{Shervin:DATE'12,
+ author = {Shervin Sharifi and Raid Ayoub and Tajana Simunic Rosing},
+ title = {TempoMP: integrated prediction and management of temperature in heterogeneous MPSoCs},
+ booktitle = date,
+ year = {2012},
+ month = {March},
+ location = {Dresden, Germany},
+ pages = {593--598}
+}
