--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3464,3 +3464,22 @@ month ={Nov.},
  location = {Dresden, Germany},
  pages = {593--598}
 }
+
+@conference{Chen:ICCAD'15,
+author={Wei-Ming Chen and Sheng-Wei Cheng and Pi-Cheng Hsiu and Tei-Wei Kuo},
+title={A user-centric {CPU-GPU} governing framework for 3D games on mobile devices},
+booktitle= iccad,
+year={2015},
+pages = {224--231},
+month ={Nov.},
+}
+
+@article{Liu:TCAD'15,
+	title={Procrustes1: Power Constrained Performance Improvement Using Extended Maximize-Then-Swap Algorithm},
+	author={Guangshuo Liu and Jinpyo Park and Diana Marculescu},
+	journal=tcad,
+	volume={34},
+	number={10},
+	pages={1664--1676},
+	year={2015},
+}
