--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3475,7 +3475,7 @@ month ={Nov.},
 }
 
 @article{Liu:TCAD'15,
-	title={Procrustes1: Power Constrained Performance Improvement Using Extended Maximize-Then-Swap Algorithm},
+	title={Procrustes^{1}: Power Constrained Performance Improvement Using Extended Maximize-Then-Swap Algorithm},
 	author={Guangshuo Liu and Jinpyo Park and Diana Marculescu},
 	journal=tcad,
 	volume={34},
