--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3425,7 +3425,7 @@ month ={Nov.},
 
 @inproceedings{Kim:DATE'15,
  author = {Young Geun Kim and Minyong Kim and Jae Min Kim and Sung Woo Chung},
- title = {M-DTM: Migration-based Dynamic Thermal Management for Heterogeneous Mobile Multi-core Processors},
+ title = {{M-DTM}: Migration-based Dynamic Thermal Management for Heterogeneous Mobile Multi-core Processors},
  booktitle = date,
  year = {2015},
  month = {March},
@@ -3450,14 +3450,14 @@ month ={Nov.},
  title = {Hybrid dynamic energy and thermal management in heterogeneous embedded multiprocessor SoCs},
  booktitle = aspdac,
  year = {2010},
- month = {January},
+ month = {Jan.},
  location = {Taipei, Taiwan},
  pages = {873--878}
 }
 
 @inproceedings{Shervin:DATE'12,
  author = {Shervin Sharifi and Raid Ayoub and Tajana Simunic Rosing},
- title = {TempoMP: integrated prediction and management of temperature in heterogeneous MPSoCs},
+ title = {{TempoMP}: integrated prediction and management of temperature in heterogeneous {MPSoCs}},
  booktitle = date,
  year = {2012},
  month = {March},
@@ -3483,3 +3483,13 @@ month ={Nov.},
 	pages={1664--1676},
 	year={2015},
 }
+
+@inproceedings{Singla:DATE'15,
+ author = {Gaurav Singla and Gurinderjit Kaur and Ali K. Unver and Umit Y. Ogras},
+ title = {Predictive dynamic thermal and power management for heterogeneous mobile platforms},
+ booktitle = date,
+ year = {2015},
+ month = {March},
+ location = {Grenoble, France},
+ pages = {960--965}
+ }
