--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3455,7 +3455,7 @@ month ={Nov.},
  pages = {873--878}
 }
 
-@inproceedings{Shervin:DATE'12,
+@inproceedings{Sharifi:DATE'12,
  author = {Shervin Sharifi and Raid Ayoub and Tajana Simunic Rosing},
  title = {{TempoMP}: integrated prediction and management of temperature in heterogeneous {MPSoCs}},
  booktitle = date,
