--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -46,6 +46,8 @@
 @string{micro="IEEE MICRO"}
 @string{icml="Proc. Int. Conf. on Machine Learning (ICML)"}
 @string{cvpr="Proc. IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)"}
+@string{dtc = "IEEE Design \& Test of Computers (DTC)"}
+@string{jetc = "ACM Journal on Emerging Technologies in Computing Systems (JETC)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -3493,3 +3495,106 @@ month ={Nov.},
  location = {Grenoble, France},
  pages = {960--965}
  }
+
+@article{Wulf:SIGARCH'95,
+ 	 title={Hitting the memory wall: implications of the obvious},
+ 	 author={Wulf, Wm A and McKee, Sally A},
+ 	 journal={ACM SIGARCH computer architecture news},
+ 	 volume={23},
+ 	 number={1},
+ 	 pages={20--24},
+ 	 year={1995},
+  	 publisher={ACM}
+}
+
+@article{Lee:TACO'16,
+  	title={Simultaneous multi-layer access: Improving 3D-stacked memory bandwidth at low cost},
+ 	author={Lee, Donghyuk and Ghose, Saugata and Pekhimenko, Gennady and Khan, Samira and Mutlu, Onur},
+ 	journal={ACM Transactions on Architecture and Code Optimization (TACO)},
+  	volume={12},
+  	number={4},
+  	pages={63},
+  	year={2016},
+  	publisher={ACM}
+}
+
+@article{Liu:DTC'05,
+ 	title={Bridging the processor-memory performance gap with 3D IC technology},
+ 	author={Liu, Christianto C and Ganusov, Ilya and Burtscher, Martin and Tiwari, Sandip},
+  	journal={IEEE Design \& Test of Computers},
+  	volume={22},
+  	number={6},
+  	pages={556--564},
+  	year={2005},
+  	publisher={IEEE}
+}
+
+@inproceedings{Meng:DAC'12,
+  	title={Optimizing energy efficiency of 3-D multicore systems with stacked DRAM under power and thermal constraints},
+  	author={Meng, Jie and Kawakami, Katsutoshi and Coskun, Ayse K},
+  	booktitle={Proceedings of the 49th Annual Design Automation Conference},
+  	pages={648--655},
+  	year={2012},
+  	organization={ACM}
+}
+
+@inproceedings{Cheng:Tencon'13,
+  	title={Thermal-aware task allocation, memory mapping, and task scheduling for 3D stacked memory and processor architecture},
+  	author={Cheng, Wei-Kai and Hsu, Ting-Wei},
+  	booktitle={IEEE 2013 Tencon-Spring},
+  	pages={95--98},
+  	year={2013},
+  	organization={IEEE}
+}
+
+@article{Lee:TVLSI'15,
+  	title={Runtime thermal management for 3-d chip-multiprocessors with hybrid SRAM/MRAM l2 cache},
+  	author={Lee, Seunghan and Kang, Kyungsu and Kyung, Chong-Min},
+  	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+  	volume={23},
+  	number={3},
+  	pages={520--533},
+  	year={2015},
+  	publisher={IEEE}
+}
+
+@article{Lee:TVLSI'16,
+  	title={Hybrid L2 NUCA Design and Management Considering Data Access Latency, Energy Efficiency, and Storage Lifetime},
+  	author={Lee, Seunghan and Kang, Kyungsu and Jung, Jongpil and Kyung, Chong-Min},
+  	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+  	volume={24},
+  	number={10},
+  	pages={3118--3131},
+  	year={2016},
+  	publisher={IEEE}
+}
+
+@inproceedings{Healy:CICC'10,
+  	title={Design and analysis of 3D-MAPS: A many-core 3D processor with stacked memory},
+  	author={Healy, Michael B and Athikulwongse, Krit and Goel, Rohan and Hossain, Mohammad M and Kim, Dae Hyun and Lee, Young-Joon and Lewis, Dean L and Lin, Tzu-Wei and Liu, Chang and Jung, Moongon and others},
+  	booktitle={IEEE Custom Integrated Circuits Conference 2010},
+  	pages={1--4},
+  	year={2010},
+  	organization={IEEE}
+}
+
+@article{Zhang:JETC'15,
+  	title={Dynamic cache pooling in 3D multicore processors},
+  	author={Zhang, Tiansheng and Meng, Jie and Coskun, Ayse K},
+  	journal={ACM Journal on Emerging Technologies in Computing Systems (JETC)},
+  	volume={12},
+  	number={2},
+  	pages={14},
+  	year={2015},
+  	publisher={ACM}
+}
+
+@article{Asad:MM'17,
+  	title={Optimization-based power and thermal management for dark silicon aware 3D chip multiprocessors using heterogeneous cache hierarchy},
+  	author={Asad, Arghavan and Ozturk, Ozcan and Fathy, Mahmood and Jahed-Motlagh, Mohammad Reza},
+  	journal={Microprocessors and Microsystems},
+  	volume={51},
+  	pages={76--98},
+  	year={2017},
+  	publisher={Elsevier}
+}
