update and bug fix

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -53,6 +53,16 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{GuoWang:ASPDAC'19,
+ author = {Xingxing Guo and Hai Wang and Chi Zhang and He Tang and Yuan Yuan},
+ title = {Leakage-Aware Thermal Management for Multi-Core Systems Using Piecewise Linear Model Based Predictive Control},
+ booktitle = aspdac,
+ year = {2018},
+ month = {January},
+ location = {Tokyo, Japan},
+ OPTpages = {417--422}
+}
+
 @ARTICLE{WangTang:TOC'18,
 	author = {Hai Wang and Diya Tang and Ming Zhang and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
 	journal = toc,
@@ -3477,7 +3487,7 @@ month ={Nov.},
 }
 
 @article{Liu:TCAD'15,
-	title={Procrustes^{1}: Power Constrained Performance Improvement Using Extended Maximize-Then-Swap Algorithm},
+	title={Procrustes: Power Constrained Performance Improvement Using Extended Maximize-Then-Swap Algorithm},
 	author={Guangshuo Liu and Jinpyo Park and Diana Marculescu},
 	journal=tcad,
 	volume={34},
